fixed/text/navbar/cards/footer:yung text at logo color has been changed navbar and footer, cards paragraph fix overflow and responsive

--- a/src/components/Servicess/style.module.css
+++ b/src/components/Servicess/style.module.css
@@ -153,4 +153,16 @@
   .cards {
     width: 280px;
   }
+
+  .titleVaccine {
+    color: var(--brown);
+    font-family: 'Nunito';
+    font-size: 1.5rem;
+  }
+
+  .cardsParagraph {
+    font-family: 'Roboto';
+    color: var(--brown);
+    font-size: .9rem;
+  }
 }
